# lab4

./: CMakeLists.txt  CarStruct.c  Comporators.c  Comporators.h  Erase.c  FGetLine.c  FunctionsExecution.c  FunctionsExecution.h  InputFunctions.c  InputFunctions.h  Insert.c  InsertInSortedArray.c  MainCircle.c  MainCircle.h  Makefile  MenuClass.c  MenuCreation.c  MenuCreation.h  OutputFunctions.c  OutputFunctions.h  ReadFromFile.c  ReadFromTerminal.c  Sorts.c  Sorts.h  StartSession.c  StartSession.h  Timing.c  Timing.h  WorkWithData.h  app  check.txt  main.c  new_cars.txt  prog  qwqwq  test.c  test1.txt  test_input.txt
